# cppcourse-brunel

./: CMakeLists.txt  README.md  datar.ipynb
.ipynb_checkpoints/: datar-checkpoint.ipynb
doxy/html/: _contants_8h_source.html  annotated.html  classes.html  classnetwork-members.html  classnetwork.html  classneurone-members.html  classneurone.html  classsimulation-members.html  classsimulation.html  files.html  functions.html  functions_func.html  index.html  network_8h_source.html  neurone_8h_source.html  simulation_8h_source.html
doxy/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  searchdata.js
doxy/latex/: annotated.tex  classnetwork.tex  classneurone.tex  classsimulation.tex  refman.tex
res/: Spike_times -eta2_g5.txt  Spike_times-eta0.9_g4.5.txt
src/: Contants.h  main.cpp  network.cpp  network.h  neurone.cpp  neurone.h  simulation.cpp  simulation.h
test/: unittest.cpp
test/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake  gtest.cbp
